--- a/package.json
+++ b/package.json
@@ -11,24 +11,49 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "aws-amplify": "^6.6.6",
-    "vue": "^3.4.21"
+    "@aws-amplify/datastore": "^5.0.42",
+    "@aws-amplify/ui-vue": "^4.2.10",
+    "@aws-sdk/client-ses": "^3.624.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@sendgrid/mail": "^8.1.3",
+    "aws-amplify": "^6.5.0",
+    "axios": "^1.7.2",
+    "core-js": "^3.37.1",
+    "dropbox": "^10.34.0",
+    "glob": "^9.3.5",
+    "gsap": "^3.13.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "lru-cache": "^11.0.0",
+    "rimraf": "^4.4.1",
+    "vue": "^3.4.21",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.5.0",
-    "@aws-amplify/backend-cli": "^1.2.9",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.5",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@aws-amplify/backend": "^1.0.4",
+    "@aws-amplify/backend-cli": "^1.1.1",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@tsconfig/node20": "^20.1.8",
+    "@types/node": "^20.19.27",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/runtime-dom": "^3.4.34",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.23",
     "aws-cdk": "^2.137.0",
     "aws-cdk-lib": "^2.137.0",
     "constructs": "^10.3.0",
     "esbuild": "^0.20.2",
     "npm-run-all2": "^6.1.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.4.10",
-    "vue-tsc": "^2.0.11"
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21",
+    "vue-router": "^4.4.0",
+    "vue-tsc": "^2.0.29"
   }
 }
