--- a/amplify.yml
+++ b/amplify.yml
@@ -1,12 +1,9 @@
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
+    preBuild:
+      commands:
+        - npm ci
     build:
       commands:
         - npm run build
@@ -16,5 +13,25 @@ frontend:
       - '**/*'
   cache:
     paths:
-      - .npm/**/*
       - node_modules/**/*
+      - .amplify/**
+      
+# Configuración específica para videos
+customHeaders:
+  - pattern: '**/*.webm'
+    headers:
+      - key: 'Content-Type'
+        value: 'video/webm'
+      - key: 'Cache-Control'
+        value: 'public, max-age=31536000, immutable'
+      - key: 'Accept-Ranges'
+        value: 'bytes'
+        
+  - pattern: '**/*.mp4'
+    headers:
+      - key: 'Content-Type'
+        value: 'video/mp4'
+      - key: 'Cache-Control'
+        value: 'public, max-age=31536000, immutable'
+      - key: 'Accept-Ranges'
+        value: 'bytes'
